--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,19 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
   flutter_signin_button: ^2.0.0
+  chopper: ^4.0.1
+  freezed: ^0.14.2
+  freezed_annotation: ^0.14.2
+  json_serializable: ^4.1.3
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.0.6
+  chopper_generator: ^4.0.1
+
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -48,8 +57,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/images/934246926f16ded570c3ec799b3f62a3.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
