--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   freezed: ^0.14.2
   freezed_annotation: ^0.14.2
   json_serializable: ^4.1.3
+  flutter_bloc: ^7.0.1
 
 
 dev_dependencies:
